<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="data"
            type="com.example.finalproject.room.UserEntity" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".edit.EditUserActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_edit_user"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/base_color"
            app:navigationIcon="@drawable/ic_back_white"
            app:title="Update Profile"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_upload_foto"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_10sdp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="onClick"
                android:src="@drawable/upload_foto" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:backgroundTint="@color/bg_edit_text"
                app:boxBackgroundColor="@color/bg_edit_text"
                app:boxCornerRadiusBottomEnd="@dimen/_18sdp"
                app:boxCornerRadiusBottomStart="@dimen/_18sdp"
                app:boxCornerRadiusTopEnd="@dimen/_18sdp"
                app:boxCornerRadiusTopStart="@dimen/_18sdp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeErrorColor="@android:color/holo_red_light"
                app:hintTextColor="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNameSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:padding="@dimen/_20sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/school"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_school_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:entries="@array/spinner_school"
                android:hint="@string/enter_your_school"
                android:padding="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/description"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_description_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/tell_me_about_you"
                android:padding="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/base_color"
                android:onClick="onClick"
                android:text="@string/save"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/_18sdp" />

        </LinearLayout>

    </LinearLayout>

</layout>