<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".welcome.WelcomeActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            android:backgroundTint="@color/base_color"
            app:cardCornerRadius="@dimen/_40sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_25sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/lorem"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_40sdp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignIn"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/black"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:onClick="onClick"
                        app:cornerRadius="@dimen/_18sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSingUp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:text="@string/sign_up"
                        android:onClick="onClick"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:cornerRadius="@dimen/_18sdp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>