<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="hasBiometric"
            type="Boolean" />

        <import type="android.view.View" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_color"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">

        <!--toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbaar_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_25sdp"
            app:navigationIcon="@drawable/ic_back">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="onClick"
                    android:paddingEnd="@dimen/_20sdp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/lorem"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/white"
            android:shadowColor="@color/black"
            app:cardCornerRadius="@dimen/_40sdp"
            app:cardElevation="@dimen/_50sdp"
            android:elevation="@dimen/_50sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:backgroundTint="@color/bg_edit_text"
                    app:boxBackgroundColor="@color/bg_edit_text"
                    app:boxCornerRadiusBottomEnd="@dimen/_18sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_18sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_18sdp"
                    app:boxCornerRadiusTopStart="@dimen/_18sdp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeErrorColor="@android:color/holo_red_light"
                    app:hintTextColor="@android:color/darker_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPhoneLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:padding="@dimen/_20sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/bg_edit_text"
                    app:boxBackgroundColor="@color/bg_edit_text"
                    app:boxCornerRadiusBottomEnd="@dimen/_18sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_18sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_18sdp"
                    app:boxCornerRadiusTopStart="@dimen/_18sdp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeErrorColor="@android:color/holo_red_light"
                    app:hintTextColor="@android:color/darker_gray"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:inputType="numberPassword"
                        android:padding="@dimen/_20sdp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@android:color/black"
                    android:onClick="onClick"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/_18sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBiometricLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/white"
                    android:onClick="onClick"
                    android:text="@string/login_by_biometric"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:visibility='@{hasBiometric ? View.VISIBLE : View.GONE}'
                    app:cornerRadius="@dimen/_18sdp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="0.8dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>